# lib

./: .gitignore  .replit  main.py  pyproject.toml  replit.nix  w_okada's_Voice_Changer_version_2_x.ipynb
secrets/: variables.json_enc
test/: encr_variables.py  json암호화.py  split str.py  table in cmd.py  too many variables.py  tuple.py
