[tool.poetry]
name = "lib"
version = "0.1.0"
description = ""
authors = ["octomelon <47421952+octomelon@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
qrcode = "^8.0"
pillow = "^10.4.0"
rich = "^13.9.2"
coloredlogs = "^15.0.1"
cryptography = "^43.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
